# ToastCPU

./: .gitmodules  pres.md  readme.md  readme.txt  temp.txt  toastarch.txt
assem/: Cargo.toml
assem/src/: main.rs  tasm.lalrpop  tasm_ast.rs  tasm_convert.rs  tasm_ops.rs  toast_lex.rs
assembler/: README.md  assembler.py  checker_board.tasm  jal.tasm  lorumipsum.tasm  out.comp  out.mif  pushpop.tasm  test.py  text.tasm  vga_gradient.tasm
compiler/: Cargo.toml  README.md  build.rs
compiler/sample_programs/: main.tl
compiler/src/: ast.rs  emit.rs  main.rs  parse.rs  preprocess.rs  tl.l  tl.lalrpop  tl.y
compiler/src/emit/: block.rs  const_defs.rs  function.rs  global.rs  mod.rs  module.rs  operator.rs  statement.rs  string_defs.rs  type_check.rs  types.rs
compiler/src/parser_util/: convert.rs  types.rs
compiler/src/util/: dep_graph.rs  gss.rs  labels.rs  mod.rs
compiler_ts/: Cargo.toml
emu/: Cargo.toml  Makefile  defs.hpp  emu.cpp  memory.hpp  registers.hpp
font/: convert.py  list.txt
fpga/: README.md  ToastCPU_FPGA.qpf  ToastCPU_FPGA.qsf  ToastCPU_FPGA_assignment_defaults.qdf  alu.sv  clock.qsys  clock.sopcinfo  controlpath.sv  datapath.sv  hex_driver.sv  key_driver.sv  main.sv  memory.sv  ram.qip  ram.v  ram_bb.v  registers.sv  rom.qip  rom.v  rom_bb.v  segment.v  switch_driver.sv  vga_clk.qsys  vga_driver.sv  vga_ram.qip  vga_ram_bb.v  virtual_16.qsys
language-server-tl/: Cargo.toml
llvm/: readme.md
sample_programs/: .gitignore  test.mif  test.mif.bak  vga_gradient.mif  vga_test_pattern.mif
spec/: abi.md  arch.md  impl.md  readme.md
(+258 files in other folders)
